# airflow_deepapp_ocr

./: .dockerignore  .env  .gitignore  Dockerfile  README_EXPORT.md  check_venv.sh  checklist_export.py  col.py  docker-compose.yaml  fix.py  layout.py  line.py  mysql-init.sql  ocr_result.txt  opencv.py  orb.py  paddletoonx.py  pathUtlis.py  requirements-gpu.txt  requirements.txt  setup-dev.sh  test.py  text.md  validate_export.py
config/: airflow.cfg
cpp_lib/: CMakeLists.txt
dags/: ocr_dag.py  test_read_file.py  test_requirements.py
dags/dag_finetune_paddleocr/: tasks.py
dags/dag_ner_from_text/: README.md  __init__.py  config.py  dag.py  inference.py  inference_v2.py  tasks.py
dags/dag_remove_background/: README.md  __init__.py  config.py  dag.py  tasks.py
dags/dag_train_classifier/: README.MD  __init__.py  config.py  dag.py  tasks.py
dags/data/: example.pkl
models/.vietocr_cache/config/: vgg_seq2seq.yml  vgg_transformer.yml
models/buiquangmanhhp1999/: README
models/buiquangmanhhp1999/weights/: cnn.onnx  decoder.onnx  encoder.onnx
models/doc_classifier/checkpoints/: history.json
models/doc_classifier/inference/: config.json  (+3 more)
models/jahongir7174/: README
models/phobert_ner/: label_config.json
models/vietocr_transformer_onnx/: config.yaml  transformer_cnn.onnx  vietocr_decoder.onnx  vietocr_encoder.onnx  vietocr_transformer_full.pt
services/: benchmark_vietocr_steps.py  convert_vietocr_transformer_to_onnx.py  demo.py  demo2.py  doc_classifier.py  file_api.py  file_manager.py  ocr_export.py  simple_document_analyzer.py  test_export.py  vietcache.py  vietocr_onnx.py  vietocr_onnx_optimized.py  vietocr_transformer.py  vietocr_transformer_fast.py  vietocr_transformer_hybrid.py  vietocr_transformer_onnx.py
(+5 files in other folders)
